# ToiyumeRender

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  Source.vcxproj  TAA.hlsl  ToiyumeRender.sln  ToiyumeRender.sln - 快捷方式.lnk  TooiyumeRender.sln  TooiyumeRender.sln - 快捷方式.lnk  vcpkg.json
Assets/Textures/: uesugi.dds
Demos/DefaultApp/: CMakeLists.txt  Tooiyume.cpp
Demos/DeferredApp/: CMakeLists.txt  DeferredApp.cpp
Demos/ForwardApp/: CMakeLists.txt  Tooiyume.cpp
Engine/: CMakeLists.txt  Engine.md
Engine/00_Core/: CommandLineArg.h  Core.md  PCH.cpp  PCH.h  SystemTime.cpp  SystemTime.h  assert.h
Engine/00_Core/Math/: BoundingBox.h  BoundingPlane.h  BoundingSphere.cpp  BoundingSphere.h  Frustum.cpp  Math.md  Random.cpp
Engine/00_Core/Utility/: CommandLineArg.cpp  FileUtility.cpp  Hash.h  Utility.md
Engine/01_Application/: Application.md  Display.cpp  Display.h  GameCore.cpp  GameCore.h  GameInput.cpp
Engine/02_Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ShadowCamera.h
Engine/02_RHI/: GraphicsCore.cpp  GraphicsCore.h  RHI.md
Engine/02_RHI/Command/: CommandAllocatorPool.cpp  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  CommandSignature.cpp
Engine/02_RHI/Descriptor/: DescriptorHeap.cpp  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h
Engine/02_RHI/Memory/: LinearAllocator.cpp  LinearAllocator.h
Engine/02_RHI/Pipeline/: GraphicsCommon.cpp  GraphicsCommon.h  PipelineState.cpp  PipelineState.h  RootSignature.cpp  RootSignature.h  SamplerManager.cpp  SamplerManager.h
Engine/02_RHI/Resource/: ColorBuffer.cpp  ColorBuffer.h  DepthBuffer.cpp  DepthBuffer.h  GpuBuffer.cpp  GpuBuffer.h  PixelBuffer.cpp  PixelBuffer.h  ShadowBuffer.cpp  Texture.cpp  Texture.h
Engine/02_RHI/Resource/Heap/: ReadbackBuffer.cpp  ReadbackBuffer.h  UploadBuffer.cpp  UploadBuffer.h
Engine/03_AssetSystem/: AssetSystem.md
Engine/03_AssetSystem/Assets/Constants/: ConstantBuffers.h
Engine/03_AssetSystem/Importers/: glTF.cpp  glTF.h
Engine/03_AssetSystem/Importers/Mesh/: IndexOptimizePostTransform.cpp  MeshConvert.cpp  MeshConvert.h
Engine/03_AssetSystem/Importers/Model/: ModelConvert.cpp
Engine/03_AssetSystem/Importers/Texture/: DDSTextureLoader.cpp  DDSTextureLoader.h  TextureConvert.cpp  TextureManager.cpp  TextureManager.h
Engine/03_RHI/: GraphicsCore.cpp  GraphicsCore.h  RHI.md
Engine/03_RHI/CommandSystem/: CommandAllocatorPool.cpp  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  CommandSignature.h
Engine/03_RHI/DescriptorSystem/: DescriptorHeap.cpp  DescriptorHeap.h
Engine/03_RHI/Pipeline/: GraphicsCommon.cpp  GraphicsCommon.h  PipelineState.cpp  RootSignature.cpp  samplerManager.cpp  samplerManager.h
Engine/03_RHI/Resource/: ColorBuffer.cpp  ColorBuffer.h  DepthBuffer.cpp  DepthBuffer.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.cpp  PixelBuffer.cpp  PixelBuffer.h  ShadowBuffer.cpp  ShadowBuffer.h  Texture.cpp  Texture.h
Engine/04_GPUInfrastructure/: GPUInfrastructure.md
Engine/04_GPUInfrastructure/DynamicDescriptor/: DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h
Engine/04_GPUInfrastructure/GPUHeap/: ReadbackBuffer.cpp  ReadbackBuffer.h  UploadBuffer.cpp  UploadBuffer.h
Engine/04_GPUInfrastructure/MemoryAllocator/: LinearAllocator.cpp  LinearAllocator.h
Engine/04_Renderer/: BufferManager.cpp  BufferManager.h
Engine/04_Renderer/Features/: RenderFeatures.md
Engine/04_Renderer/Features/Lighting/: LightingSystem.cpp  LightingSystem.h
Engine/04_Renderer/Material/: Material.h
Engine/04_Renderer/Pipeline/: PipelineDesc.h  PipelineStateCache.cpp  PipelineStateCache.h
Engine/04_Renderer/Renderer/: RendererConfig.h
Engine/04_Renderer/Renderer/Base/: BaseRenderer.cpp  BaseRenderer.h  RendererRegistry.cpp  RendererRegistry.h
Engine/04_Renderer/Renderer/Deferred/: DeferredRenderer.cpp  DeferredRenderer.h
Engine/04_Renderer/Renderer/Forward/: ForwardRenderer.cpp  ForwardRenderer.h  testrenderer.cpp
Engine/05_ResourceSystem/: ResourceSystem.md
Engine/05_ResourceSystem/00_Buffers/: ConstantBuffers.h
Engine/05_ResourceSystem/01_Manager/: BufferManager.cpp  BufferManager.h  TextureManager.cpp  TextureManager.h
Engine/05_ResourceSystem/03_Model/: glTF.cpp  glTF.h
Engine/05_ResourceSystem/03_Model/00_Meshes/: MeshConvert.cpp  MeshConvert.h
Engine/05_ResourceSystem/03_Model/02_Textures/: TextureConvert.cpp
Engine/05_Scene/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ShadowCamera.cpp  ShadowCamera.h
Engine/05_Scene/Model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
Engine/06_Content/Shaders/01_Default/: DefaultVS.h
Engine/06_Content/Shaders/05_BRDF/: BRDF.hlsl  BRDFHelp.hlsl
Engine/06_RenderGraph/: RenderGraph.md
Engine/07_RenderPasses/: RenderPasses.md
Engine/08_RenderFeatures/Lighting/: LightingSystem.cpp
Engine/09_Renderer/: BaseRenderer.cpp  BaseRenderer.h  Renderer.cpp  Renderer.h  RendererRegistry.cpp  RendererRegistry.h  forwardRenderer.cpp  forwardRenderer.h  testRenderer.cpp  testRenderer.h
Engine/09_Renderer/Deferred/: DeferredRenderer.h
Engine/10_Scene/: Model.cpp  Model.h  ModelConvert.cpp  ModelLoader.cpp  ModelLoader.h  Scene.md
Engine/11_Shaders/00_Common/: Common.hlsli
Engine/11_Shaders/01_Default/: DefaultPS.h  DefaultPS.hlsl  DefaultVS.hlsl
Engine/12_Utility/: DDSTextureLoader.cpp  FileUtility.h  Hash.h  IndexOptimizePostTransform.cpp  Utility.cpp  Utility.h  json.hpp
Engine/13_Math/: BoundingBox.h  BoundingPlane.h  BoundingSphere.h  Functions.inl  Matrix4.h
Engine/20_cmake/: BinToHeader.cmake  CompileShader.cmake  ShaderCompiler.cmake
Engine/Shader/02_Deferred/: GBufferPS.hlsl  StaticMeshVS.hlsl
Source/App/: App.vcxproj  App.vcxproj.filters
Source/Engine/: Engine.md  Engine.vcxproj  Engine.vcxproj.filters  GameCore.cpp  packages.config
Source/Model/: ConstantBuffers.h  IndexOptimizePostTransform.h  MeshConvert.cpp  MeshConvert.h  Model.cpp  Model.h  Model.vcxproj  Model.vcxproj.filters  (+9 more)
hs/: hs.vcxproj
(+240 files in other folders)
